Wow done some work eh

--- a/styles/style.css
+++ b/styles/style.css
@@ -185,3 +185,12 @@ template {
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
+
+.longWeather {
+  display: none; }
+
+.open {
+  display: block; }
+
+.close {
+  display: none; }
