--- a/styles/style.css
+++ b/styles/style.css
@@ -186,6 +186,32 @@ template {
   clip: rect(0 0 0);
   overflow: hidden; }
 
+.mainPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .mainPage header {
+    text-align: center; }
+
+.returnedContent {
+  display: none; }
+
+.returnedContentShow {
+  display: block; }
+
+.weather, .longWeather {
+  background: #443abc;
+  border: 2px solid pink;
+  border-radius: 10px;
+  padding: 20px; }
+
 .longWeather {
   display: none; }
 
