--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -19,6 +19,10 @@
    display: block;
 }
 
+form{
+    margin-top: 80px;;
+}
+
 //styles for the DIVS that hold both currentWeather and weatherForecast
 .weather, .longWeather {
    background: #443abc;
