--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,41 @@
+.mainPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .mainPage header {
+    text-align: center; }
+
+.returnedContent {
+  display: none; }
+
+.returnedContentShow {
+  display: block; }
+
+form {
+  margin-top: 80px; }
+
+.weather, .longWeather {
+  background: #443abc;
+  border: 2px solid pink;
+  border-radius: 10px;
+  padding: 20px; }
+
+.longWeather {
+  display: none; }
+
+.open {
+  display: block; }
+
+.close {
+  display: none; }
+
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
@@ -185,38 +223,3 @@ template {
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
-
-.mainPage {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-  .mainPage header {
-    text-align: center; }
-
-.returnedContent {
-  display: none; }
-
-.returnedContentShow {
-  display: block; }
-
-.weather, .longWeather {
-  background: #443abc;
-  border: 2px solid pink;
-  border-radius: 10px;
-  padding: 20px; }
-
-.longWeather {
-  display: none; }
-
-.open {
-  display: block; }
-
-.close {
-  display: none; }
