--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -20,14 +20,16 @@
 }
 
 //styles for the DIVS that hold both currentWeather and weatherForecast
-.weather, .longWeather {
+//styles for the DIVS that hold both currentWeather and weatherForecast
+.weather, .longWeather, .blurb, .strava {
    background: #443abc;
    border: 2px solid pink;
    border-radius: 10px;
    padding: 20px;
-
 }
-
+.container{
+    display: flex;
+}
 
 //sets weatherForecast as hidden until requested
 .longWeather {
