--- a/styles/style.css
+++ b/styles/style.css
@@ -21,11 +21,16 @@
 form {
   margin-top: 80px; }
 
-.weather, .longWeather {
+.weather, .longWeather, .blurb, .strava {
   background: #443abc;
   border: 2px solid pink;
   border-radius: 10px;
   padding: 20px; }
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .longWeather {
   display: none; }
