--- a/styles/partials/_setup.scss
+++ b/styles/partials/_setup.scss
@@ -10,6 +10,7 @@
 html {
    font-size: 62.5%;
    font-family: $mainfont;
+   background: $textcolor;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
    color: $textcolor;
    background: $backgroundcolor;
    line-height: 1.6;
+   letter-spacing: 1px;
 }
 
 .wrapper {
