--- a/styles/partials/_landingpage.scss
+++ b/styles/partials/_landingpage.scss
@@ -1,86 +1,77 @@
-//styles for loading/landing page
-
+//HEADER STYLES
 header {
-      text-align: center;
-      overflow: hidden;
-   h1 {
-      // text-transform: uppercase;
-      letter-spacing: 1.5px;
-      font-weight: 700;
-      text-shadow: -0.5px 0.5px $accentcolor, -1px 1px $accentcolor, -1.5px 1.5px $accentcolor, -2px 2px $accentcolor, -2.5px 2.5px $accentcolor, -3px 3px $accentcolor, -3.5px 3.5px $accentcolor, -4px 4px $accentcolor, -4.5px 4.5px $accentcolor;
-   }
-}
-
-header::before {
-   content: "";
-   position: relative;
-   top: -35px;
-   display: block;
-   width: 180%;
-   height: 110%;
-   transform: rotate(9deg);
-   background: $accentcolor;
-   z-index: 1;
-}
-
-header::after {
-   content: "";
-   position: relative;
-   top: 25px;
-   display: block;
-   width: 150%;
-   left: -2px;
-   height: 80%;
-   transform: rotate(-4deg);
-   background: $textcolor;
-   z-index: 1;
-}
-
-
-.landingPage {
+   text-align: center;
    display: flex;
    flex-direction: column;
    height: 100vh;
    position: relative;
+   overflow: hidden;
 
    h1 {
       text-transform: uppercase;
       text-align: left;
-      width: 45%;
+      width: 50%;
       font-size: 4.2rem;
       align-self: flex-start;
       margin-bottom: 120px;
+      letter-spacing: 1.5px;
+      font-weight: 700;
+      text-shadow: -0.5px 0.5px $accentcolor, -1px 1px $accentcolor, -1.5px 1.5px $accentcolor, -2px 2px $accentcolor, -2.5px 2.5px $accentcolor, -3px 3px $accentcolor, -3.5px 3.5px $accentcolor, -4px 4px $accentcolor, -4.5px 4.5px $accentcolor, -5px 5px rgb(91, 90, 90);
       @media screen and (min-width: 1000px){
          font-size: 6rem;
          width: 100%;
       }
    }
+   &::before {
+      content: "";
+      position: relative;
+      top: -35px;
+      display: block;
+      width: 180%;
+      height: 110%;
+      transform: rotate(9deg);
+      background: $accentcolor;
+      z-index: 1;
+   }
+   &::after {
+         content: "";
+      position: relative;
+      top: 25px;
+      display: block;
+      width: 150%;
+      left: -2px;
+      height: 80%;
+      transform: rotate(-3deg);
+      background: $textcolor;
+      z-index: 1;
+   }
+}
+//HEADER STYLES END
 
-   form {
+
+//FORM STYLES
+form {
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   text-transform: capitalize;
+   margin-bottom: 40px;
+   @media screen and (min-width: 1000px){
+      align-items: center;
+   }
+
+   .formContainer {
       display: flex;
       flex-direction: column;
       width: 100%;
-      text-transform: capitalize;
-      margin-bottom: 40px;
       @media screen and (min-width: 1000px){
-         align-items: center;
-      }
-
-      .formContainer {
-         display: flex;
-         flex-direction: column;
-         width: 100%;
-         @media screen and (min-width: 1000px){
          width: 50%;
-
-      }
       }
    }
 
    label {
       text-align: left;
       padding: 10px 2px;
-   
    }
 
    input {
@@ -113,9 +104,15 @@ header::after {
          align-self: center;
       }
    }
+}
+//FORM STYLES END
+
+//ABOUT SECTION STYLES
+.landingPage {
 
    .about {
-      margin: 0;
+      margin: 25px 25px 5px 25px;
+      bottom: 10px;
       i {
          color: $textcolor;
          font-size: 3rem;
@@ -130,32 +127,32 @@ header::after {
       flex-direction: column;
       align-items: center;
       position: absolute;
-      width: 80%;
+      width: 90%;
       left: -1000%;
-      top: 25%;
+      top: 5%;
       display: block;
       z-index: 5;
       background: $offwhite;
       border-radius: 5px;
-      padding: 20px 50px;
+      padding: 10px 20px;
       text-align: left;
       box-shadow: -1px 1px 3px rgb(101, 101, 101);
       -webkit-transition: left 800ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-     
       transition: left 800ms cubic-bezier(0.785, 0.135, 0.15, 0.86); 
-      @media screen and (min-width: 1000px){
-         width: 60%;
-         
+      @media screen and (min-width: 768px){
+         width: 60%; 
+         top: 25%;  
+         padding: 20px 30px;
       }
    }
 
    .aboutContentOpen {
       display: flex;
-      left: 10%;
-      @media screen and (min-width: 1000px){
+      left: 5%;
+      
+      @media screen and (min-width: 768px){
          left: 20%; 
       }
    }
-    
-
 }
+//ABOUT SECTION END
