--- a/styles/partials/_setup.scss
+++ b/styles/partials/_setup.scss
@@ -7,6 +7,7 @@
 .visuallyhidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
 //GLOBAL STYLES
+
 html {
    font-size: 62.5%;
    font-family: $mainfont;
@@ -27,5 +28,8 @@ body {
    margin: 0 auto;
    @media screen and (min-width: 700px) {
       width: 85%;
+   }
+   @media screen and (min-width: 900px) {
+      width: 70%;
    }
 }
