--- a/styles/partials/_landingpage.scss
+++ b/styles/partials/_landingpage.scss
@@ -32,9 +32,12 @@ header {
       transform: rotate(9deg);
       background: $accentcolor;
       z-index: 1;
+      @media screen and (max-width: 320px){
+         display: none;
+      }
    }
    &::after {
-         content: "";
+      content: "";
       position: relative;
       top: 25px;
       display: block;
@@ -44,7 +47,11 @@ header {
       transform: rotate(-3deg);
       background: $textcolor;
       z-index: 1;
+      @media screen and (max-width: 320px){
+         display: none;
+      }
    }
+
 }
 //HEADER STYLES END
 
