last repo before pulling final changes

--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -42,6 +42,11 @@
       color: tomato; 
    }
 }
+
+.searchAgain{
+  margin: 0;
+  text-align: center;
+}
 //MAIN CONTAINER STYLES END
 
 //SHORT LONG RUN SWITCH STYLES 
